crates/ditto-checker/tests/golden/type-errors/argument_length_mismatch_0.ditto
module Test exports (..)

my_fn = fn (n : Int) -> n

five = my_fn()
